# mcf_cmake

./: .gitignore  CMakeLists.txt  DISP_lib.c  README.md  SWAP_io.c  bmp_image.h  display.h  m_ssp2_d_heap.c  m_tri_init2.c  mcf.c  mcf2.h  mssptr.c  palsar.h  rasterfile.h  triangle.c  triangle.h  typedef_ISP.h
